FinancialDataService, reactive code, RandomForest and Regression PredictionServices, TechnicalIndicators object organization